reworking to add button push functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
         
     </head>
     <body>
+        <button id="numberBtn">Enter Number</button>
+
         <div id="container"></div>
+        
         <script src="eas.js"></script>
     </body>
 </html>
